--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,29 +57,21 @@ dependencies:
   go_router: ^6.0.9
   app_links: ^3.4.2
   websafe_svg: ^2.1.2
-  flutter_paystack: ^1.0.7
-  device_info_plus: ^8.1.0
-  # device_info_plus: ^9.1.2
-  web_socket_channel: ^2.3.0
   awesome_notifications: ^0.7.4
   dropdown_search: ^5.0.6
   file_picker: ^5.2.10
   flutter_pdfview: ^1.3.0
   flutter_native_splash: ^2.2.18
-  sentry_flutter: ^7.8.0
-  # screenshot: ^1.3.0
   screenshot: ^2.3.0
   gallery_saver: ^2.3.2
   share_plus: ^6.3.4
-  # share_plus: ^7.2.2
-  flutter_background_service: ^5.0.1
-  sms_autofill: ^2.3.0
   open_file: ^3.3.2
   package_info_plus: ^3.1.0
   flutter_swipe_detector: ^2.0.0
-  geolocator: ^11.0.0
-  geocoding: ^3.0.0
-  flutter_app_installer: ^1.0.0
+  country_picker: ^2.0.26
+  country_icons: ^2.0.2
+  device_info_plus: ^8.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -141,9 +133,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    # - assets/rts/
-    # - assets/avatar/
-    # - assets/cards/
+    - assets/images/
+    - assets/icons/
+    - assets/avatar/
+    - assets/cards/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
