--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,7 +55,21 @@ android {
         versionName flutterVersionName
     }
 
+
+    signingConfigs {
+        debug {
+            keyAlias 'androiddebugkey'
+            keyPassword 'smartpay'
+            storeFile file('smartpaykey.jks')
+            storePassword 'smartpay'
+        }
+    }
+
+
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
